--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
             <h2>Productos Destacados</h2>
             <div class="product-cards">
                 <div class="product-card">
-                    <img src="imgproductosmujer/blusa blanca.jpg" alt="Producto 1">
+                    <img src="/imgproductosmujer/tipa1.jpeg" alt="Producto 1">
                     <p class="product-name">blusa blanca</p>
                     <p class="price">$25.99</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="codigoproductomujer/producto1.html" class="btn">Comprar</a>
                 </div>
                 <div class="product-card">
-                    <img src="imagenes de productos/regular-cargo-jeans-gris-para-hombre_2_color_nuevo_58bfbf3a-85dd-4143-99bd-f089e3f5ea9f.webp" alt="Producto 2">
+                    <img src="imgproductos hombre/tipo1.jpeg" alt="Producto 2">
                     <p class="product-name">Pantalón Deportivo</p>
                     <p class="price">$34.99</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="/producto de hombres codigo/producto1.html" class="btn">Comprar</a>
                 </div>
                 <div class="product-card">
-                    <img src="/imgproductosmujer/camisanegra.jpg" alt="Producto 3">
+                    <img src="/imgproductosmujer/tipa2.jpeg" alt="Producto 3">
                     <p class="product-name">Camisa negra</p>
                     <p class="price">$49.99</p>
-                    <a href="#" class="btn">Comprar</a>
+                    <a href="/codigoproductomujer/producto2.html" class="btn">Comprar</a>
                 </div>
             </div>
         </section>
