--- a/mujer/mujeres.html
+++ b/mujer/mujeres.html
@@ -41,7 +41,7 @@
         <img src="/imgproductosmujer/tipa2.jpeg" alt="Camisa B">
         <h3>blusa crema</h3>
         <p>Precio: $34.99</p>
-        <a href="/producto de hombres codigo/producto2.html" class="btn-buy">Ver Producto</a>
+        <a href="/codigoproductomujer/producto2.html" class="btn-buy">Ver Producto</a>
       </div>
 
       <!-- Producto 3 -->
