--- a/codigoproductomujer/producto2.html
+++ b/codigoproductomujer/producto2.html
@@ -21,11 +21,12 @@
   <section class="product">
     <div class="product-images">
       <!-- Imagen principal de producto -->
-      <img id="main-image" src="/imagenes de productos/regular-cargo-jeans-gris-para-hombre_2_color_nuevo_58bfbf3a-85dd-4143-99bd-f089e3f5ea9f.webp" alt="Camisa de Hombre">
+      <img id="main-image" src="/imgproductosmujer/tipa2.jpeg" alt="Camisa de Hombre">
       <div class="thumbnails">
         <!-- Miniaturas de las imágenes -->
-        <img class="thumbnail" src="/imagenes de productos/cargo 2.webp" alt="Camisa de Hombre 2">
-        <img class="thumbnail" src="/imagenes de productos/regular-cargo-jeans-gris-para-hombre_2_color_nuevo_58bfbf3a-85dd-4143-99bd-f089e3f5ea9f.webp" alt="Camisa de Hombre 3">
+        <img class="thumbnail" src="/imgproductosmujer/tipa2 (2).jpeg" alt="Camisa de Hombre 2">
+        <img class="thumbnail" src="/imgproductosmujer/tipa2 (3).jpeg alt=" alt="a">
+        <img class="thumbnail" src="/imgproductosmujer/tipa2 .jpeg" alt="Camisa de Hombre 4">
       </div>
     </div>
 
