--- a/ver producto .html
+++ b/ver producto .html
@@ -32,7 +32,7 @@
             <div class="product-cards">
                 <div class="product-card">
                     <h2>Hombre</h2>
-                    <img  src="imagenes de productos/regular-cargo-jeans-gris-para-hombre_2_color_nuevo_58bfbf3a-85dd-4143-99bd-f089e3f5ea9f.webp" alt="Producto 1">
+                    <img  src="/imgproductos hombre/tipo5 (3).jpeg" alt="Producto 1">
                     <p class="product-name">Camiseta Básica</p>
                     <p class="price">$25.99</p>
                     <a href="hombre/hombres.html" class="btn">Ver</a>
@@ -41,7 +41,7 @@
             <div class="product-cards">
                 <div class="product-card">
                     <h2>Mujer</h2>
-                    <img src="/imgproductosmujer/blusacreama.jpg" alt="Producto 1">
+                    <img src="/imgproductosmujer/1 pieza Blusa de mujer casual y minimalista de manga corta, para uso diario.jpeg" alt="Producto 1">
                     <p class="product-name">Camiseta Básica</p>
                     <p class="price">$25.99</p>
                     <a href="mujer/mujeres.html" class="btn">Ver</a>
