ojala se cambien en la pagina

--- a/codigoproductomujer/producto1.html
+++ b/codigoproductomujer/producto1.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <div>
-        <p>>J&S de calle</p>
+        <p></p>
     </div>
     <nav>
       <ul>
@@ -38,17 +38,17 @@
     </div>
 
     <div class="product-details">
-      <h1>Blusa blanca - Estilo Casual</h1>
+      <h1>Blusa  - Estilo Casual</h1>
       <p class="price">$39.99</p>
       <p class="description">
-        blusa blana para dama, con un diseño casual perfecto para cualquier ocasión.
+        Blusa para dama, con un diseño casual perfecto para cualquier ocasión.
       </p>
       <button id="add-to-cart">Comprar</button>
     </div>
   </section>
 
   <footer>
-    <p>&copy; 2024 Benetton</p>
+    <p>&copy; </p>
   </footer>
 
   <!-- Enlace al archivo JavaScript -->
