--- a/hombre/hombres.html
+++ b/hombre/hombres.html
@@ -31,7 +31,7 @@
       <!-- Producto 1 -->
       <div class="product-card">
         <img src="/imgproductos hombre/tipo1.jpeg" alt="Camisa A">
-        <h3>Camisa Azul</h3>
+        <h3>Camisa </h3>
         <p>Precio: $39.99</p>
         <a href="/producto de hombres codigo/producto1.html" class="btn-buy">Ver Producto</a>
       </div>
@@ -39,7 +39,7 @@
       <!-- Producto 2 -->
       <div class="product-card">
         <img src="/imgproductos hombre/tipo2.jpeg" alt="Camisa B" >
-        <h3>Camisa Blanca</h3>
+        <h3>Camisa </h3>
         <p>Precio: $34.99</p>
         <a href="/producto de hombres codigo/producto2.html" class="btn-buy">Ver Producto</a>
       </div>
@@ -47,7 +47,7 @@
       <!-- Producto 3 -->
       <div class="product-card">
         <img src="/imgproductos hombre/tipo3.jpeg" alt="Camisa C">
-        <h3>Camisa Negra</h3>
+        <h3>Camisa </h3>
         <p>Precio: $29.99</p>
         <a href="/producto de hombres codigo/producto3.html" class="btn-buy">Ver Producto</a>
       </div>
@@ -55,7 +55,7 @@
       <!-- Producto 4 -->
       <div class="product-card">
         <img src="/imgproductos hombre/tipo4.jpeg" alt="Camisa D">
-        <h3>Camisa Verde</h3>
+        <h3>Camisa </h3>
         <p>Precio: $32.99</p>
         <a href="/producto de hombres codigo/producto4.html" class="btn-buy">Ver Producto</a>
       </div>
@@ -69,7 +69,7 @@
       <!-- Producto 5 -->
       <div class="product-card">
         <img src="/imgproductos hombre/tipo5.jpeg" alt="Camisa A">
-        <h3>Camisa Azul</h3>
+        <h3>Camisa manga larga</h3>
         <p>Precio: $39.99</p>
         <a href="/producto de hombres codigo/producto5.html" class="btn-buy">Ver Producto</a>
       </div>
