--- a/mujer/mujeres.html
+++ b/mujer/mujeres.html
@@ -31,7 +31,7 @@
       <!-- Producto 1 -->
       <div class="product-card">
         <img src="/imgproductosmujer/tipa1.jpeg" alt="Camisa A">
-        <h3>blusa blanca</h3>
+        <h3>Blusa</h3>
         <p>Precio: $39.99</p>
         <a href="/codigoproductomujer/producto1.html" class="btn-buy">Ver Producto</a>
       </div>
@@ -39,7 +39,7 @@
       <!-- Producto 2 -->
       <div class="product-card">
         <img src="/imgproductosmujer/tipa2.jpeg" alt="Camisa B">
-        <h3>blusa crema</h3>
+        <h3>Camisa </h3>
         <p>Precio: $34.99</p>
         <a href="/codigoproductomujer/producto2.html" class="btn-buy">Ver Producto</a>
       </div>
@@ -47,7 +47,7 @@
       <!-- Producto 3 -->
       <div class="product-card">
         <img src="/imgproductosmujer/tipa3.jpeg" alt="Camisa C">
-        <h3>Camisa Negra</h3>
+        <h3>Camisa </h3>
         <p>Precio: $29.99</p>
         <a href="/producto de hombres codigo/producto3.html" class="btn-buy">Ver Producto</a>
       </div>
@@ -55,7 +55,7 @@
       <!-- Producto 4 -->
       <div class="product-card">
         <img src="/imgproductosmujer/tipa4.jpeg" alt="Camisa D">
-        <h3>Camisa blanca</h3>
+        <h3>Camisa manga larga</h3>
         <p>Precio: $32.99</p>
         <a href="/producto de hombres codigo/producto3.html" class="btn-buy">Ver Producto</a>
       </div>
