--- a/codigoproductomujer/producto2.html
+++ b/codigoproductomujer/producto2.html
@@ -31,10 +31,10 @@
     </div>
 
     <div class="product-details">
-      <h1>Camisa de Hombre - Estilo Casual</h1>
+      <h1>Camisa  - Estilo Casual</h1>
       <p class="price">$39.99</p>
       <p class="description">
-        Camisa de manga larga para hombre, con un diseño casual perfecto para cualquier ocasión.
+        Camisa, con un diseño casual perfecto para cualquier ocasión.
       </p>
       <button id="add-to-cart">Añadir al carrito</button>
     </div>
