--- a/producto de hombres codigo/producto4.html
+++ b/producto de hombres codigo/producto4.html
@@ -37,7 +37,7 @@
       <h1>Camisa de Hombre - Estilo Casual</h1>
       <p class="price">$39.99</p>
       <p class="description">
-        Camisa de manga larga para hombre, con un diseño casual perfecto para cualquier ocasión.
+         Camisa para hombre, con un diseño casual perfecto para cualquier ocasión.
       </p>
       <button id="add-to-cart">Añadir al carrito</button>
     </div>
