ya aqui esta subido todo el proyecto

--- a/hombre/hombres.html
+++ b/hombre/hombres.html
@@ -11,14 +11,14 @@
   <header>
     <div class="navbar">
         <div class="logo">
-            <a href="#">J&S de Calle</a>
+            <a href="#"></a>
         </div>
         <nav>
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
-                <li><a href="hombre/hombres.html">Hombre</a></li>
+                <li><a href="/hombre/hombres.html">Hombre</a></li>
                 <li><a href="mujer/mujeres.html">Mujeres</a></li>
-                <li><a href="#">General</a></li>
+                
             </ul>
         </nav>
     </div>
