--- a/producto de hombres codigo/producto4.html
+++ b/producto de hombres codigo/producto4.html
@@ -12,8 +12,8 @@
   <header>
     <nav>
       <ul>
-         <li><a class="xd" href="#">Inicio</a></li>
-        <li><a class="xd" href="">Categorías</a></li>
+         <li><a class="xd" href="/index.html">Inicio</a></li>
+        <li><a class="xd" href="/ver producto .html">Categorías</a></li>
         <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
         <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
         <li><a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a></li>
@@ -39,7 +39,7 @@
       <p class="description">
          Camisa para hombre, con un diseño casual perfecto para cualquier ocasión.
       </p>
-      <button id="add-to-cart">Añadir al carrito</button>
+      <button id="add-to-cart"><a href="/pasarela_de_pago.html">Comprar</a></button>
     </div>
   </section>
 
