--- a/codigoproductomujer/producto2.html
+++ b/codigoproductomujer/producto2.html
@@ -5,15 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Camisa de Hombre - Benetton</title>
   <link rel="stylesheet" href="producto.css">
+  <!-- Iconos de Font Awesome -->
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Categorías</a></li>
-        <li><a href="#">Ofertas</a></li>
-        <li><a href="#">Carrito</a></li>
+       <li><a class="xd" href="/index.html">Inicio</a></li>
+        <li><a class="xd" href="/ver producto .html">Categorías</a></li>
+        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -25,8 +28,8 @@
       <div class="thumbnails">
         <!-- Miniaturas de las imágenes -->
         <img class="thumbnail" src="/imgproductosmujer/tipa2 (2).jpeg" alt="Camisa de Hombre 2">
-        <img class="thumbnail" src="/imgproductosmujer/tipa2 (3).jpeg alt=" alt="a">
-        <img class="thumbnail" src="/imgproductosmujer/tipa2 .jpeg" alt="Camisa de Hombre 4">
+        <img class="thumbnail" src="/imgproductosmujer/tipa2 (3).jpeg" alt="a">
+        <img class="thumbnail" src="/imgproductosmujer/tipa2.jpeg" alt="Camisa de Hombre 4">
       </div>
     </div>
 
@@ -36,7 +39,7 @@
       <p class="description">
         Camisa, con un diseño casual perfecto para cualquier ocasión.
       </p>
-      <button id="add-to-cart">Añadir al carrito</button>
+      <button id="add-to-cart"><a href="/pasarela_de_pago.html">Comprar</a></button>
     </div>
   </section>
 
@@ -44,6 +47,6 @@
     <p>&copy; 2024 Benetton</p>
   </footer>
 
-  <script src="hombres.js"></script>
+  <script src="productos.js"></script>
 </body>
 </html>
