--- a/codigoproductomujer/producto4.html
+++ b/codigoproductomujer/producto4.html
@@ -5,15 +5,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Camisa de Hombre - Benetton</title>
   <link rel="stylesheet" href="producto.css">
+  <!-- Iconos de Font Awesome -->
+   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="#">Inicio</a></li>
-        <li><a href="#">Categorías</a></li>
-        <li><a href="#">Ofertas</a></li>
-        <li><a href="#">Carrito</a></li>
+        <li><a class="xd" href="/index.html">Inicio</a></li>
+        <li><a class="xd" href="/ver producto .html">Categorías</a></li>
+        <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+        <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+        <li><a href="https://tiktok.com" target="_blank"><i class="fab fa-tiktok"></i></a></li>
       </ul>
     </nav>
   </header>
@@ -21,21 +24,22 @@
   <section class="product">
     <div class="product-images">
       <!-- Imagen principal de producto -->
-      <img id="main-image" src="/imagenes de productos/regular-cargo-jeans-gris-para-hombre_2_color_nuevo_58bfbf3a-85dd-4143-99bd-f089e3f5ea9f.webp" alt="Camisa de Hombre">
+      <img id="main-image" src="/imgproductosmujer/tipa4.jpeg" alt="Camisa de Hombre">
       <div class="thumbnails">
         <!-- Miniaturas de las imágenes -->
-        <img class="thumbnail" src="/imagenes de productos/cargo 2.webp" alt="Camisa de Hombre 2">
-        <img class="thumbnail" src="/imagenes de productos/regular-cargo-jeans-gris-para-hombre_2_color_nuevo_58bfbf3a-85dd-4143-99bd-f089e3f5ea9f.webp" alt="Camisa de Hombre 3">
+        <img class="thumbnail" src="/imgproductosmujer/tipa4 (2).jpeg" alt="Camisa de Hombre 2">
+        <img class="thumbnail" src="/imgproductosmujer/tipa4 (3).jpeg" alt="Camisa de Hombre 3">
+        <img class="thumbnail" src="/imgproductosmujer/tipa4.jpeg" alt="Camisa de Hombre 4">
       </div>
     </div>
 
     <div class="product-details">
-      <h1>Camisa de Hombre - Estilo Casual</h1>
+      <h1>Camisa manga larga  - Estilo Casual</h1>
       <p class="price">$39.99</p>
       <p class="description">
-        Camisa de manga larga para hombre, con un diseño casual perfecto para cualquier ocasión.
+        Camisa de manga larga, con un diseño casual perfecto para cualquier ocasión.
       </p>
-      <button id="add-to-cart">Añadir al carrito</button>
+      <button id="add-to-cart"><a href="/pasarela_de_pago.html">Comprar</a></button>
     </div>
   </section>
 
@@ -43,6 +47,6 @@
     <p>&copy; 2024 Benetton</p>
   </footer>
 
-  <script src="hombres.js"></script>
+  <script src="productos.js"></script>
 </body>
 </html>
