--- a/mujer/mujeres.html
+++ b/mujer/mujeres.html
@@ -49,7 +49,7 @@
         <img src="/imgproductosmujer/tipa3.jpeg" alt="Camisa C">
         <h3>Camisa </h3>
         <p>Precio: $29.99</p>
-        <a href="/producto de hombres codigo/producto3.html" class="btn-buy">Ver Producto</a>
+        <a href="/codigoproductomujer/producto3.html" class="btn-buy">Ver Producto</a>
       </div>
 
       <!-- Producto 4 -->
@@ -57,21 +57,21 @@
         <img src="/imgproductosmujer/tipa4.jpeg" alt="Camisa D">
         <h3>Camisa manga larga</h3>
         <p>Precio: $32.99</p>
-        <a href="/producto de hombres codigo/producto3.html" class="btn-buy">Ver Producto</a>
+        <a href="/codigoproductomujer/producto4.html" class="btn-buy">Ver Producto</a>
       </div>
     </div>
   </section>
 
 
   <section class="product-list">
-    <h2>Pantalón para mujer</h2>
+    <h2>Camisas para mujeres</h2>
     <div class="products">
       <!-- Producto 5 -->
       <div class="product-card">
         <img src="/imgproductosmujer/tipa5.jpeg" alt="Camisa A">
         <h3>Camisa Azul</h3>
         <p>Precio: $39.99</p>
-        <a href="/producto de hombres codigo/producto4.html" class="btn-buy">Ver Producto</a>
+        <a href="/codigoproductomujer/producto5.html" class="btn-buy">Ver Producto</a>
       </div>
 
       <!-- Producto 6 -->
@@ -79,7 +79,7 @@
         <img src="/imgproductosmujer/tipa6.jpeg" alt="Camisa B">
         <h3>Camisa Blanca</h3>
         <p>Precio: $34.99</p>
-        <a href="/producto de hombres codigo/producto5.html" class="btn-buy">Ver Producto</a>
+        <a href="/codigoproductomujer/producto6.html" class="btn-buy">Ver Producto</a>
       </div>
 
       <!-- Producto 7 
