--- a/ver producto .html
+++ b/ver producto .html
@@ -49,7 +49,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 J&S de Calle. Todos los derechos reservados.</p>
+        <p>&copy; . Todos los derechos reservados.</p>
     </footer>
 
 </body>
