--- a/hombre/hombres.html
+++ b/hombre/hombres.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="/hombre/hombres.html">Hombre</a></li>
-                <li><a href="mujer/mujeres.html">Mujeres</a></li>
+                <li><a href="/mujer/mujeres.html">Mujeres</a></li>
                 
             </ul>
         </nav>
