--- a/mujer/mujeres.html
+++ b/mujer/mujeres.html
@@ -16,7 +16,7 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Inicio</a></li>
-                <li><a href="hombre/hombres.html">Hombre</a></li>
+                <li><a href="/hombre/hombres.html">Hombre</a></li>
                 <li><a href="/mujer/mujeres.html">Mujeres</a></li>
                 <li><a href="#">General</a></li>
             </ul>
