--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <!-- FOOTER -->
     <footer>
         <div class="footer-content">
-            <p>&copy; J&S de calle | Todos los derechos reservados</p>
-            <p>Dirección: Calle Ejemplo 123, Ciudad, País</p>
+            <p>&copy;| Todos los derechos reservados</p>
+            <p>Managua</p>
         </div>
     </footer>
 
